Bug 270721 - Filter panel in "find" view: Clicking checkbox (e.g. "Documents" or "This Week") twice aborts search
Summary: Filter panel in "find" view: Clicking checkbox (e.g. "Documents" or "This Wee...
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: panels: search (other bugs)
Version First Reported In: 16.12.2
Platform: Ubuntu Linux
: NOR minor
Target Milestone: ---
Assignee: Peter Penz
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-04-11 23:50 UTC by Fabian
Modified: 2012-05-10 20:45 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.9.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Fabian 2011-04-11 23:50:02 UTC
Version:           unspecified (using KDE 4.6.2) 
OS:                Linux

When using the "find" feature of dolphin, you can additionally filter the results for certain criteria, e.g. "Documents | Audio | Video" or "Anytime | Today | This Week"...

If you check one criterion and then uncheck it again, the search mask is closed and dolphin goes back to normal file view.
This happens for the multi-choice checkboxes (squared, Type) as well as for the one-choice checkboxes (Time interval, Rating).
This only happens, if the checkbox is the /last/ checked checkbox.

Reproducible: Always

Steps to Reproduce:
1) Open Dolphin
2) press Ctrl+F
3) On the right hand side the "Filter" should appear. If not, press F12 to activate it or choose it via menu "View -> Panels -> Filter" (or similar, my locale is German)
4) Click on "Documents" in the filter panel (-> should start searching documents)
5) Click "Documents" again

Actual Results:  
The find operation is cancelled and Dolphin goes back to normal file view.

Expected Results:  
The checkbox on "Documents" should get unchecked. Dolphin should stay in "Find" mode.

OS: Linux (x86_64) release 2.6.35-28-generic
Compiler: cc
Comment 1 Peter Penz 2012-05-10 20:45:35 UTC
Git commit 2e5676a6e00a78db4152f3b76328352751b3af65 by Peter Penz.
Committed on 10/05/2012 at 22:40.
Pushed by ppenz into branch 'master'.

Reimplement search-filters
Related: bug 280377
FIXED-IN: 4.9.0

M  +2    -3    dolphin/src/dolphinviewcontainer.cpp
M  +1    -2    dolphin/src/dolphinviewcontainer.h
M  +122  -17   dolphin/src/search/dolphinfacetswidget.cpp
M  +30   -1    dolphin/src/search/dolphinfacetswidget.h
M  +47   -27   dolphin/src/search/dolphinsearchbox.cpp
M  +5    -27   dolphin/src/search/dolphinsearchbox.h

http://commits.kde.org/kde-baseapps/2e5676a6e00a78db4152f3b76328352751b3af65