Reimplement search-filters

BUG: 270721
BUG: 280377
FIXED-IN: 4.9.0